# GameOfLife

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Assets/: bin-icon-ASE.aseprite  pause-button-ASE.aseprite  play-button-ASE.aseprite  step-back-ASE.aseprite  step-forward-ASE.aseprite
Headers/: Components.h  GameCamera.h  RaylibOverloads.h  Util.h
